spring-boot/cloud-native-mall/k8s/canary/mall-gateway-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mall-gateway-canary
spec:
  selector:
    app: mall-gateway
    version: canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
