spring-boot/cloud-native-mall/k8s/canary/mall-gateway-canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mall-gateway-canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: mall.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mall-gateway-canary
                port:
                  number: 80
